# idownscale

./: .gitignore  .jscpd.json  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  EGU26_Downscaling_ML.pptx  EGU_COURSE_ENVIRONMENT_SETUP.md  EGU_Presentation_Slides.md  EGU_Short_Course_Methodology.md  ENVIRONMENT_REPRODUCTION.md  README  README.md  RELEASE_NOTES.md  SBCK-CDFt.ipynb  SESSION_STATE.md  SINGULARITY_ENV_SETUP.md  __init__.py  check_shapes.py  compare_2010_metrics.py  diagnostic_bias_check.py  migrate_v29.py  pyproject.toml  requirements.txt  requirements_noversions.txt  run_bench_opt1.sh  run_diagnostic_tools.sh  run_exp5.sh  run_exp5_full.sh  run_exp5_full.sh~  run_exp5_full_portable.sh  run_future_projections.sh  run_garcia_clean.sh  run_generic_workflow.sh  run_production_pipeline.sh  run_production_singularity.sh  run_sample_workflow.sh  setup_conda.sh  setup_env.sh  setup_venv.sh  unzip_v29.py  (+1 more)
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST.md  pull_request_template.md
.github/linters/: .flake8  .jscpd.json  .markdownlint.json  .ruff.toml  jscpd.json  mlc_config.json
.github/workflows/: check-links.yml  ci.yml  lint.yml
doc/: CALYPSO_RUNBOOK.md  ENVIRONMENT_SETUP.md  EXPG_GERMANY_CERRA_REPORT.md  GRACE_TRAINING_ENGINEER_NOTE.md  GRACE_TRAINING_VALIDATION_NOTE.md  HOME_REPO_LAYOUT.md  OBJECTIVE_PLAN.md  PERFECT_MODEL_ENGINEER_REPORT.md  PERFECT_MODEL_IMPLEMENTATION_NOTES.md  RELEASE_NOTE_DRAFT_v1.2.0.md  RESTART_HANDOFF_2026-06-08.md  zoe_technical_report_iriscc.md
docs/: conf.py  evaluation.rst  getting_started.rst  hyperparameters_reference.rst  index.rst  management.rst  notebooks.rst  package_architecture.rst  preprocessing.rst  release_notes.rst  settings_reference.rst  training.rst  workflow_reference.rst
docs/egu26_short_course/: DATASETS_TO_PROVIDE.md  DATA_SETUP_QUICKSTART.md  ENVIRONMENT_SETUP.md  EXPECTED_PHASE_OUTPUTS.md  HELPER_SCRIPTS.md  HOW_TO_FETCH_UPSTREAM_DATA.md  LOCAL_WORKFLOW_RUNBOOK.md  MERCURE_DEPLOY_PLAN.md  PHASE_VALIDATION.md  SESSION_MATERIALS.md  SESSION_SUMMARY.md  WORKFLOW_PHASES.md  egu26_short_course_notebook.ipynb
docs/notebooks/: perfect_model_bc_cddpm_rcm.ipynb  tas_bc_ml_cerra_gcm.ipynb  tas_bc_ml_eobs_gcm.ipynb  tas_bc_ml_eobs_rcm.ipynb  tas_bc_only_eobs_gcm.ipynb
iriscc/: __init__.py  checkpoint_bundle.py  dataloaders.py  datautils.py  diffusionutils.py  hparams.py  idownscale_rerun.code-workspace  inference.py  lightning_module.py  lightning_module_ddpm.py  loss.py  metrics.py  plotutils.py  provenance.py  registry.py  runtime_paths.py  settings.py  settings_local.py.example  test.py  transforms.py  unet.py  value_metrics.py  windutils.py
iriscc/models/: __init__.py  cddpm.py  denoising_unet.py  miniswinunetr.py  miniunet.py  shared.py  swin2sr.py  unet.py
scratch/: generate_pptx.py
testing_suite/: test_collection.py  test_simple.py
tests/: __init__.py  conftest.py  test_bias_correction_sbck.py  test_build_dataset_pp.py  test_checkpoint_bundle.py  test_datautils.py  test_datautils_resolution.py  test_docs_coherence.py  test_hparams.py  test_legacy_metric_scripts.py  test_metrics.py  test_models.py  test_plotutils.py  test_provenance.py  test_registry.py  test_runtime_paths.py  test_settings.py  test_transforms.py  test_windutils.py  test_workflow_runner.py
